--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="/js/mini_backend.js"></script>
     <script src="/js/includeHTML.js"></script>
+    <script src="/js/JSON.js"></script>
     <script src="/js/contacts.js"></script>
     <link rel="stylesheet" href="/css/font.css">
     <link rel="stylesheet" href="/css/contactsStyle.css">
@@ -13,11 +15,11 @@
     <link rel="stylesheet" href="/css/generalStyle.css">
     <link rel="stylesheet" href="/css/headerStyle.css">
 </head>
-<body onload="includeHTML()">
+<body onload="includeHTML(), rednerContacts()">
     <div w3-include-html="templates/sidebarTemplate.html"></div>
     <div w3-include-html="templates/headerTemplate.html"></div>
     <div class="contacts">
-        <div class="contactsContainerLeft">
+        <div id="contactsContainerLeft">
 
         </div>
         <div class="contactsContainerRight">
