--- a/board.html
+++ b/board.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="/js/mini_backend.js"></script>
     <script src="/js/includeHTML.js"></script>
+    <script src="/js/JSON.js"></script>
+    <script src="/js/script.js"></script>
     <link rel="stylesheet" href="/css/font.css">
     <link rel="stylesheet" href="/css/boardStyle.css">
     <link rel="stylesheet" href="/css/sidbarStyle.css">
@@ -14,7 +17,7 @@
     <link rel="stylesheet" href="/css/headerStyle.css">
 </head>
 
-<body onload="includeHTML()">
+<body onload="includeHTML(), init()">
     <div w3-include-html="templates/sidebarTemplate.html"></div>
     <div w3-include-html="templates/headerTemplate.html"></div>
     <div class="board">
