--- a/summary.html
+++ b/summary.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+    <script src="/js/mini_backend.js"></script>
+    <script src="/js/JSON.js"></script>
+    <script src="/js/script.js"></script>
     <script src="/js/includeHTML.js"></script>
     <script src="/js/summary.js"></script>
     <link rel="stylesheet" href="/css/font.css">
@@ -13,7 +18,8 @@
     <link rel="stylesheet" href="/css/generalStyle.css">
     <link rel="stylesheet" href="/css/headerStyle.css">
 </head>
-<body onload="includeHTML()">
+
+<body onload="includeHTML(), init()";>
     <div w3-include-html="templates/sidebarTemplate.html"></div>
     <div w3-include-html="templates/headerTemplate.html"></div>
     <div class="summary">
@@ -21,56 +27,61 @@
             <h1 class="summaryHeadline">Summary</h1>
             <div style="font-size: 20px">Everything in a nutshell!</div>
         </div>
-        <div class="summaryContainerLeft">
-            <div class="secondRow">
-                <div>
-                    <h2>5</h2>
-                    <div>Tasks in Board</div>
+        <div class="container">
+            <div class="summaryContainerLeft">
+                <div class="secondRow">
+                    <div class="sections sectionMarginRight section2ndRow">
+                        <div class="sectionNumber">5</div>
+                        <div class="sectionText">Tasks in <br>Board</div>
+                    </div>
+                    <div class="sections sectionMarginRight section2ndRow">
+                        <div class="sectionNumber">2</div>
+                        <div class="sectionText">Tasks in <br>Progress</div>
+                    </div>
+                    <div class="sections section2ndRow">
+                        <div class="sectionNumber">2</div>
+                        <div class="sectionText">Awaiting <br>Feedback</div>
+                    </div>
                 </div>
-                <div>
-                    <h2>2</h2>
-                    <div>Tasks in Progress</div>
-                </div>
-                <div>
-                    <h2>2</h2>
-                    <div>Awaiting Feedback</div>
-                </div>
-            </div>
-            <div class="thirdRow">
-                <div>
-                    <div>
-                        <img src="/img/urgentIcon.svg" alt="">
-                        <div>
-                            <h3>1</h3>
-                            <div>Urgent</div>
+                <div class="thirdRow">
+                    <div class="sections section3rdRow">
+                        <div class="thirdRowLeft">
+                            <img src="/img/urgentIcon.svg" class="urgentIcon" alt="">
+                            <div>
+                                <div style="font-size: 47px;">1</div>
+                                <div style="font-size: 16px">Urgent</div>
+                            </div>
+                        </div>
+                        <div class="thirdRowRight">
+                            <h2 class="sectionText">October 16,2022</h2>
+                            <div style="font-size: 16px">Upcoming Deadline</div>
                         </div>
                     </div>
-                    <div>
-                        <div>October 16,2022</div>
-                        <div>Upcoming Deadline</div>
+                </div>
+                <div class="fourthRow">
+                    <div class="sections sectionMarginRight section4thRow">
+                        <img src="/img/editIcon.svg" class="summaryIcons" alt="">
+                        <div>
+                            <div class="sectionNumber">1</div>
+                            <div class="sectionText">To-do</div>
+                        </div>
+                    </div>
+                    <div class="sections section4thRow">
+                        <img src="/img/doneIcon.svg" class="summaryIcons" alt="">
+                        <div>
+                            <div class="sectionNumber">1</div>
+                            <div class="sectionText">Done</div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="fourthRow">
-                <div>
-                    <img src="/img/editIcon.svg" alt="">
-                    <div>
-                        <h3>1</h3>
-                        <div>To-do</div>
-                    </div>
-                </div>
-                <div>
-                    <img src="/img/doneIcon.svg" alt="">
-                    <div>
-                        <h3>1</h3>
-                        <div>Done</div>
-                    </div>
-                </div>
+            <div class="summaryContainerRight">
+                <div>Good morning,</div>
+                <div class="summaryName">Sofia Müller</div>
             </div>
         </div>
-        <div class="summaryContainerRight">
-            Good morning, Sofia Müller
-        </div>
+
     </div>
 </body>
+
 </html>
